--- a/Itminus.CategoryTree.csproj
+++ b/Itminus.CategoryTree.csproj
@@ -6,7 +6,7 @@
 
   <PropertyGroup>
     <PackageId>Itminus.CategoryTree</PackageId>
-    <Version>0.1.2</Version>
+    <Version>0.1.3</Version>
     <Authors>itminus</Authors>
   </PropertyGroup>
 
@@ -16,8 +16,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.MVC" Version="2.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.MVC" Version=">=2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version=">=2.1.0" />
   </ItemGroup>
 
 </Project>
