--- a/Itminus.CategoryTree.csproj
+++ b/Itminus.CategoryTree.csproj
@@ -16,8 +16,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.MVC" Version=">=2.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version=">=2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.MVC" Version="2.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.*" />
   </ItemGroup>
 
 </Project>
